# adventofcode

./: README.md
2020/: Cargo.toml
2020/src/: bin.rs  day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  file_utils.rs  print_utils.rs
2021/: Makefile  day1.c  day2.c  day3.c  day4.c  day5.c  day6.c  day7.c  day8.c  day9.c
2021/includes/: conversions.c  files.c  memory.c
