[package]
name = "adventofcode-2020"
version = "0.1.0"
authors = ["Alaa Sarhan <sarhan.alaa@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
permutate = "0.3.2"
clap = "2.33"
regex = "1.4.2"
scanner-rust = "2.0.13"
lazy_static = "1.4.0"

[[bin]]
name = "bin"
path = "src/bin.rs"
